--- a/config/auth0.yml
+++ b/config/auth0.yml
@@ -1,3 +1,3 @@
 development:
-  issuerUri: <%= ENV["AUTH0_DOMAIN"] %>
-  audience: <%= ENV["AUTH0_AUDIENCE"] %>
+  domain: <%= ENV.fetch('AUTH0_DOMAIN') %>
+  audience: <%= ENV.fetch('AUTH0_AUDIENCE') %>
